--- a/charmcraft.yaml
+++ b/charmcraft.yaml
@@ -9,3 +9,11 @@ bases:
     run-on:
       - name: "ubuntu"
         channel: "20.04"
+
+parts:
+  charm:
+    build-packages:
+      - libffi-dev
+      - libssl-dev
+      - rustc
+      - cargo
