--- a/pyproject.toml
+++ b/pyproject.toml
@@ -38,3 +38,10 @@ docstring-convention = "google"
 copyright-check = "True"
 copyright-author = "Canonical Ltd."
 copyright-regexp = "Copyright\\s\\d{4}([-,]\\d{4})*\\s+%(author)s"
+
+[tool.mypy]
+exclude = ["integration/acme-tester/*"]
+
+[[tool.mypy.overrides]]
+module = ["charms.*"]
+follow_imports = "silent"
