--- a/tox.ini
+++ b/tox.ini
@@ -8,8 +8,10 @@ envlist = lint, static, unit
 
 [vars]
 src_path = {toxinidir}/src/
+lib_path = {toxinidir}/lib/
 unit_test_path = {toxinidir}/tests/unit/
-all_path = {[vars]src_path} {[vars]unit_test_path}
+integration_test_path = {toxinidir}/tests/integration/
+all_path = {[vars]src_path} {[vars]unit_test_path} {[vars]integration_test_path} {[vars]lib_path}
 
 [testenv]
 setenv =
@@ -43,7 +45,7 @@ deps =
     isort
     codespell
 commands =
-    codespell {[vars]all_path}
+    codespell {[vars]all_path} --skip {[vars]integration_test_path}acme-tester --skip {[vars]lib_path}charms/tls_certificates_interface
     pflake8 {[vars]all_path}
     isort --check-only --diff {[vars]all_path}
     black --check --diff {[vars]all_path}
@@ -62,7 +64,7 @@ deps =
 setenv =
     PYTHONPATH = ""
 commands =
-    mypy {[vars]all_path} {posargs}
+    mypy {[vars]all_path} --exclude {[vars]lib_path}charms/tls_certificates_interface/v1/tls_certificates.py --exclude lib/charms/tls_certificates_interface/v1/tls_certificates.py {posargs}
 
 [testenv:unit]
 description = Run unit tests
@@ -73,3 +75,13 @@ deps =
 commands =
     coverage run --source={[vars]src_path} -m pytest {[vars]unit_test_path} -v --tb native -s {posargs}
     coverage report
+
+[testenv:integration]
+description = Run integration tests
+deps =
+    pytest
+    juju
+    pytest-operator
+    -r{toxinidir}/requirements.txt
+commands =
+    pytest --asyncio-mode=auto -v --tb native {[vars]integration_test_path} --log-cli-level=INFO -s {posargs}
