--- a/.github/workflows/upload.yaml
+++ b/.github/workflows/upload.yaml
@@ -15,6 +15,14 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
 
+      - name: Wait for integration tests to succeed
+        uses: lewagon/wait-on-check-action@v1.1.2
+        with:
+          ref: main
+          check-name: "Integration tests"
+          repo-token: ${{ secrets.GITHUB_TOKEN }}
+          wait-interval: 20
+
       - uses: canonical/charming-actions/upload-charm@2.0.0-rc
         with:
           credentials: "${{ secrets.CHARMCRAFT_AUTH }}"
@@ -27,3 +35,15 @@ jobs:
           CHARMCRAFT_AUTH: "${{ secrets.CHARMCRAFT_AUTH }}"
         run: |
           charmcraft publish-lib charms.acme_client_operator.v0.acme_client
+
+      - name: Chmod charmcraft logs
+        if: ${{ failure() && steps.publish.conclusion == 'failure' }}
+        run: |
+          sudo chmod -R 777 /root/snap/charmcraft/common/cache/charmcraft/log/
+
+      - name: Archive charmcraft logs
+        if: ${{ failure() && steps.publish.conclusion == 'failure' }}
+        uses: actions/upload-artifact@v3
+        with:
+          name: charmcraft-libs-upload-logs
+          path: /root/snap/charmcraft/common/cache/charmcraft/log/*.log
